tests/ui/discord-frontend/entity_macro/expected_multiple_or_unique.stderr
error: expected either `multiple` or `unique`
  --> tests/ui/discord-frontend/entity_macro/expected_multiple_or_unique.rs:40:16
   |
LL |     relates = [core "MemberEntity": via "id" as "guild_id"]
   |                ^^^^

error: aborting due to 1 previous error

